Establish 'Storable' foundation and finalize Claude Code integration - commit c91f4b2
- Define 'Storable' interface in specification to unify serialization logic.
- Refactor Repository and Adapters to leverage Storable for consistent persistence.
- Implement recursive retry in Gemini client for self-healing against JSON errors.
- Enhance ClasspathClassScanner with dynamic VFS mounting for JAR portability.
- Deploy CLAUDE.md with 'Autopoietic Design Principles' and strict coding rules.
- Simplify Agent/Topic providers by consolidating evolution logic into Repository.